@@ -12,7 +12,6 @@ Plack::Request = 0.09
 Moose = 0.93
 JSON = 2.16
 Test::More = 0
-Test::Deep = 0
 
 [PruneFiles]
 filenames = author.t ; nobody needs these
